Fix all know bug

--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "add": "^2.0.6",
+    "chart.js": "^4.2.1",
     "daisyui": "^2.51.5",
     "firebase": "^9.20.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-chart-3": "^3.1.8",
+    "vue-router": "^4.1.6",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
